2001-09-22  Wang Jian  <lark@linux.net.cn>

	* configure.in(ALL_LINGUAS): Added zh_CN for Simplified Chinese.

2001-06-21  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Catalan (ca) to $ALL_LINGUAS

2001-09-20  Frank Belew <frb@ximian.com>

	* configure.in: removed AM_CONDITIONAL(FALSE...)

2001-09-20  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Added "ta" to the languages list.

2001-09-19  Darin Adler  <darin@bentspoon.com>

	* bonobo/bonobo-control.c: (impl_Bonobo_Control_setWindowId):
	Fix parameter type to match new ORBit rules for string-like types.

	* bonobo/bonobo-file-selector-util.c: Add missing include of
	<string.h>.

2001-09-15 Murray Cumming <murrayc@usa.net>

	* samples/bonboui-hello: Now uses gtk stock items for menus and
	toolbars. Corrected symlink suggestion to include gnome/ui in
	path.

2001-09-07  Martin Baulig  <baulig@suse.de>

	Removing the libgnome dependency - part I.

	* bonobo/bonobo-ui-main.c (bonobo_ui_init_full): Call
	g_set_prgname().

	* bonobo/bonobo-file-selector-util.c (listener_cb): Make the
	`event_name' and `any' arguments const to make it compile
	without warnings.
	(create_control): Usfe g_get_prgname() instead of
	gnome_program_get_app_id().
	(concat_dir_and_file): New static function, copied from libgnome.
	(ok_clicked_cb): Use the local concat_dir_and_file() instead of
	g_concat_dir_and_file() from libgnome.

	* bonobo/bonobo-dock-item.c: #include <bonobo/bonobo-i18n.h>
	instead of <libgnome/gnome-i18n.h>.

2001-09-07  Martin Baulig  <baulig@suse.de>

	* samples/bonoboui-hello/helloapp.c: Don't #include <libgnome.h>.
	* samples/bonoboui-hello/main.c: ditto.
	* tests/test-selector.c: ditto.

2001-09-07  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-ui-component.c
	(ui_event, impl_Bonobo_UIComponent_execVerb): Reflect latest
	bonobo_closure_invoke() API changes.

2001-09-07  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-canvas-component.c: Use the bonobo-ui-marshal.[ch]