@@ -4,13 +4,6 @@
 srcdir=`dirname $0`
 test -z "$srcdir" && srcdir=.
 
-if test -z "$CERTIFIED_GNOMIE"; then
-# If you can't figure out how to set this envar, please don't come on IRC
-# whining incessantly about how your apps are broken.
-  cat $srcdir/message-of-doom
-  exit 1
-fi
-
 PKG_NAME="libbonoboui"
 
 (test -f $srcdir/configure.in \
