@@ -1,3 +1,7 @@
+2001-09-24  Havoc Pennington  <hp@redhat.com>
+
+	* autogen.sh, configure.in: destroy CERTIFIED_GNOMIE
+
 2001-09-22  Wang Jian  <lark@linux.net.cn>
 
 	* configure.in(ALL_LINGUAS): Added zh_CN for Simplified Chinese.
